# FSIV

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.hpp  main.cpp
P1/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
P2/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
P3/: CMakeLists.txt  main.cpp
P4/: CMakeLists.txt  vseg.cc  vsegbase.cpp
P5/: CMakeLists.txt  common_code.cpp  common_code.hpp  test_bovw.cpp  train_bovw.cpp
P5/data/: 02_ObjectCategories_conf.txt  conf.txt  prueba.txt
P5/data/101_objectcategories/: README.txt
P5/src/: common_code.cpp  common_code.hpp  test_bovw.cpp  train_bovw.cpp
